loading screen added

--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
     <div class="footer">
         <p>Use arrow keys to control the snake.</p>
     </div>
+
+    <!-- Loading screen -->
+    <div class="loading-screen">
+        <h1>Snake Game</h1>
+        <div class="snake">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="snake reversed">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+    </div>
 </body>
 </html>
