--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
             <div class="cell"></div>
         </div>
     </div>
+
+    <!-- Start screen -->
+    <div class="start-screen">
+        <button onclick="startGame()"><span>&#9654;</span></button>
+    </div>
 </body>
 </html>
