start game function

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Start screen -->
     <div class="start-screen">
-        <button onclick="startGame()"><span>&#9654;</span></button>
+        <button id="start-btn"><span>&#9654;</span></button>
     </div>
 </body>
 </html>
