--- a/index.html
+++ b/index.html
@@ -44,5 +44,18 @@
     <div class="start-screen">
         <button id="start-btn"><span>&#9654;</span></button>
     </div>
+
+    <!-- Restart screen -->
+    <div class="restart-screen">
+        <h1>Game over!</h1>
+        <h3>Score</h3>
+        <h2 id="score">32</h2>
+        <h3>Highest score</h3>
+        <h2 id="highest-score">122</h2>
+        <div class="btns">
+            <button id="reset-btn">Reset score</button>
+            <button id="restart-btn">Restart game</button>
+        </div>
+    </div>
 </body>
 </html>
