set and get highest score

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <div class="restart-screen">
         <h1>Game over!</h1>
         <h3>Score</h3>
-        <h2 id="score">32</h2>
+        <h2 id="score"></h2>
         <h3>Highest score</h3>
-        <h2 id="highest-score">122</h2>
+        <h2 id="highest-score"></h2>
         <div class="btns">
             <button id="reset-btn">Reset score</button>
             <button id="restart-btn">Restart game</button>
