--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div class="footer">
         <p>Use arrow keys to control the snake.</p>
+        <p>Don't hit walls or snake itself.</p>
     </div>
 
     <!-- Loading screen -->
