mobile only screen

--- a/index.html
+++ b/index.html
@@ -58,5 +58,12 @@
             <button id="restart-btn">Restart game</button>
         </div>
     </div>
+
+    <!-- Mobile only screen -->
+    <div class="mobile-only-screen">
+        <h1>Snake Game</h1>
+        <h2>Unfortunately this game is not supported for mobile devices!</h2>
+        <p>Please use a desktop computer instead.</p>
+    </div>
 </body>
 </html>
